added the mid-section which displays services

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="ship.html">Ship now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="Contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -57,33 +57,35 @@
   </div>
 </section>
 
-<section>
-        <div>   
-          <div class="card" style="width: 18rem;">
+<section class="mid-section">
+        <h1>Seamless delivery services</h1>
+        <div class="card-container">   
+          <div class="card" style="width: 22rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <h5 class="card-title">Ship now</h5>
+              <p class="card-text">Request Pick Up/Delivery and Xpress Drop-off</p>
+              <a href="#" class="card-link"></a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 22rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Overseas Shipping</h5>
+              <p class="card-text">Ship across Europe, south america, Asia and Africa, Export to over 230 plus locations worldwide</p>
               <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 22rem;">
+            <div class="card-body">
+              <h5 class="card-title">Get a Quick Quote</h5>
+              <p class="card-text">Calculate cost estimate for local & international shipments</p>
+              <a href="#" class="card-link">Card link</a>
+            </div>
+          </div>
+          <div class="card" style="width: 22rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
             </div>
           </div>
         </div>
