--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 </header>
 
 <section class="banner">
-    <div class="bg-image" style="background-image: url('Assets/img/truck1.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+  <div class="bg-image" style="background-image: url('Assets/img/ship01.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
 
-  </div>
+</div>
 </section>
 
 <section class="mid-section">
