--- a/services.html
+++ b/services.html
@@ -53,6 +53,15 @@
       </div>
     </nav>
   </header>
+  
+  <section class="banner">
+    <div class="bg-image" style="background-image: url('Assets/img/truck1.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+      <h1>
+        Our Services
+      </h1>
+  </div>
+  </section>
+
     <!-- Footer -->
     <footer class=" fixed-bottom bg-dark text-white ">
         <!-- Grid container -->
