--- a/contact.html
+++ b/contact.html
@@ -86,16 +86,16 @@
     
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!" class="text-white">About us</a>
+                  <a href="about.html" class="text-white">About us</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Services</a>
+                  <a href="services.html" class="text-white">Services</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Ship Now</a>
+                  <a href="ship.html" class="text-white">Ship Now</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-white">Contact us</a>
+                  <a href="contact.html" class="text-white">Contact us</a>
                 </li>
               </ul>
             </div>
