mades changes to my login and register pages

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-lg-7 px-5 pt-5">
           <h1 class="font-weight-bold py-3">Stone Cold Logistics</h1>
-          <h4>sign into your account</h4>
+          <h4 class="sub-title">sign into your account</h4>
           <form action="">
              <div class="form-row">
                 <div class="col-lg-7">
@@ -56,7 +56,7 @@
             </div>
            </div>
            <a href="#">Forgot password</a>
-           <p>Don't have an account? <a href="#" class="register">Register here</a> </p>  
+           <p>Don't have an account? <a href="register.html" class="register">Register here</a> </p>  
           </form>
         </div>
       </div>
