--- a/register.html
+++ b/register.html
@@ -38,25 +38,38 @@
         </div>
         <div class="col-lg-7 px-5 pt-5">
           <h1 class="font-weight-bold py-3">Stone Cold Logistics</h1>
-          <h4>sign into your account</h4>
+          <h4 class="sub-title">Create an account</h4>
           <form action="">
+            <div class="form-row">
+                <div class="col-lg-7">
+                    <h4>Full Name</h4>
+                  <input type="text" name="text" id="text" class="form-control my-3 p-4 " placeholder="Full name">
+                </div>
+             </div>
              <div class="form-row">
                 <div class="col-lg-7">
+                    <h4>Email address</h4>
                   <input type="email" name="email" id="email" class="form-control my-3 p-4 " placeholder="johndoe@gmail.com">
                 </div>
              </div>
              <div class="form-row">
               <div class="col-lg-7">
+                <h4>Input password</h4>
                 <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="********">
               </div>
            </div>
            <div class="form-row">
             <div class="col-lg-7">
-                <button type="button" class="btn1 mt-3 mb-5">Log In</button>
+              <h4>Verify password</h4>
+              <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="********">
+            </div>
+         </div>
+           <div class="form-row">
+            <div class="col-lg-7">
+                <button type="button" class="btn1 mt-3 mb-5">Sign up now</button>
             </div>
            </div>
-           <a href="#">Forgot password</a>
-           <p>Don't have an account? <a href="#" class="register">Register here</a> </p>  
+           <p>you have an account? <a href="login.html" class="register">Login here</a> </p>  
           </form>
         </div>
       </div>
