added some changes to the website

--- a/login.html
+++ b/login.html
@@ -26,6 +26,9 @@
     a{
       text-decoration: none;
     }
+    input{
+      height: 25px;
+    }
   </style>
 </head>
 <body style="background-color: rgb(219, 226, 226); color: black;">
