--- a/about.html
+++ b/about.html
@@ -97,6 +97,9 @@
                 <li>
                   <a href="contact.html" class="text-white">Contact us</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="register.html">Sign Up</a>
+                </li>
               </ul>
             </div>
             <!--Grid column-->
