--- a/register.html
+++ b/register.html
@@ -22,9 +22,14 @@
     img{
       border-top-left-radius: 30px;
       border-bottom-left-radius: 30px;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
     a{
       text-decoration: none;
+    }
+    input{
+      height: 25px;
     }
   </style>
 </head>
@@ -34,7 +39,7 @@
     <div class="container">
       <div class="row g-0">
         <div class="col-lg-5">
-            <img src="Assets/img/truck1.jpg" alt="" class="img-fluid">
+            <img src="Assets/img/register 01.jpg" alt="" class="img-fluid" style=" background-repeat: no-repeat; background-size: cover;">
         </div>
         <div class="col-lg-7 px-5 pt-5">
           <h1 class="font-weight-bold py-3">Stone Cold Logistics</h1>
@@ -48,7 +53,7 @@
              </div>
              <div class="form-row">
                 <div class="col-lg-7">
-                    <h4>Email address</h4>
+                    <h4>Email </h4>
                   <input type="email" name="email" id="email" class="form-control my-3 p-4 " placeholder="johndoe@gmail.com">
                 </div>
              </div>
