--- a/ship.html
+++ b/ship.html
@@ -119,6 +119,9 @@
                 <li>
                   <a href="#!" class="text-white">Report issues</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="register.html">Sign Up</a>
+                </li>
               </ul>
             </div>
             <!--Grid column-->
