--- a/index.html
+++ b/index.html
@@ -111,6 +111,42 @@
   </div>
 </section>  
 
+<section class="leaveMessage pb-5">
+    <div class="container py-5">
+      <div class="card"> 
+          <div class="card-body">
+              <h1 class="text-center font-weight-light py-3">Contact Us</h1>
+              <div class="row">
+                <div class="col-lg-6">
+                    <div class="row">
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+
+                      </div>
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <h3>Find Our Office</h3>
+                          <p>old Mihail kongainiceanu, nr. 8, <br>
+                            7652 Bucharest, <br>
+                            Romania </p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+
+                      </div>
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <h3>Give us a Ring</h3>
+                          <p>Stone Cold Courier, <br>
+                          +40 762 321 762, <br>
+                          Mon - Fri, 9:00 - 18:00 </p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+             
+          </div>
+      </div>
+    </div>
+</section>
   <!-- Footer -->
   <footer class=" fixed-bottom bg-dark text-white ">
     <!-- Grid container -->
