changed the background color from black to white

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <section class="banner">
   <div class="bg-image" style="background-image: url('Assets/img/ship01.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
     <h1>
-      
+      Providing top-notch delivery services
     </h1>
 </div>
 </section>
@@ -66,8 +66,8 @@
 <section class="mid-section">
         <h1>Seamless delivery services</h1>
         <a href="#" class="card-link">
-          <div class="card-container">
-            <div class="card" style="width: 22rem;">
+          <div class="card-container cardboarder-container">
+            <div class="card cardboarder" style="width: 22rem;">
               <img src="Assets/img/box.png" alt="">   
               <div class="card-body">
                 <h5 class="card-title">Ship now</h5>
@@ -76,7 +76,7 @@
             </div>
         </a>
         <a href="#" class="card-link">
-          <div class="card" style="width: 22rem;">
+          <div class="card cardboarder" style="width: 22rem;">
             <img src="Assets/img/world.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Overseas Shipping</h5>
@@ -85,7 +85,7 @@
           </div>
         </a>
         <a href="#" class="card-link">
-          <div class="card" style="width: 22rem;">
+          <div class="card cardboarder" style="width: 22rem;">
             <img src="Assets/img/message.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Get a Quick Quote</h5>
@@ -94,7 +94,7 @@
           </div>
         </a>
          <a href="#" class="card-link">
-          <div class="card" style="width: 22rem;">
+          <div class="card cardboarder" style="width: 22rem;">
             <img src="Assets/img/shop.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Alpha mode</h5>
@@ -116,14 +116,14 @@
       <div class="card"> 
           <div class="card-body">
               <h1 class="text-center font-weight-light py-3">Contact Us</h1>
-              <div class="row">
+              <div class="row pt-3">
                 <div class="col-lg-6">
                     <div class="row">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
 
                       </div>
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3>Find Our Office</h3>
+                          <h3 class="font-weight-light">Find Our Office</h3>
                           <p>old Mihail kongainiceanu, nr. 8, <br>
                             7652 Bucharest, <br>
                             Romania </p>
@@ -134,7 +134,7 @@
 
                       </div>
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3>Give us a Ring</h3>
+                          <h3 class="font-weight-light">Give us a Ring</h3>
                           <p>Stone Cold Courier, <br>
                           +40 762 321 762, <br>
                           Mon - Fri, 9:00 - 18:00 </p>
@@ -148,7 +148,7 @@
     </div>
 </section>
   <!-- Footer -->
-  <footer class=" fixed-bottom bg-dark text-white ">
+  <!-- <footer class=" fixed-bottom bg-dark text-white ">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
