--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-lg-7 px-5 pt-5">
           <h1 class="font-weight-bold py-3">Stone Cold Logistics</h1>
-          <h4 class="sub-title">sign into your account</h4>
+          <h4 class="sub-title">Sign in</h4>
           <form action="">
              <div class="form-row">
                 <div class="col-lg-7">
