--- a/register.html
+++ b/register.html
@@ -47,31 +47,31 @@
           <form action="">
             <div class="form-row">
                 <div class="col-lg-7">
-                    <h4>Full Name</h4>
+                    <h4></h4>
                   <input type="text" name="text" id="text" class="form-control my-3 p-4 " placeholder="Full name">
                 </div>
              </div>
              <div class="form-row">
                 <div class="col-lg-7">
-                    <h4>Email </h4>
+                    <h4></h4>
                   <input type="email" name="email" id="email" class="form-control my-3 p-4 " placeholder="johndoe@gmail.com">
                 </div>
              </div>
              <div class="form-row">
               <div class="col-lg-7">
-                <h4>Input password</h4>
-                <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="********">
+                <h4></h4>
+                <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="input password">
               </div>
            </div>
            <div class="form-row">
             <div class="col-lg-7">
-              <h4>Verify password</h4>
-              <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="********">
+              <h4></h4>
+              <input type="password" name="password" id="password" class="form-control  my-3 p-4 " placeholder="verify password">
             </div>
          </div>
            <div class="form-row">
             <div class="col-lg-7">
-                <button type="button" class="btn1 mt-3 mb-5">Sign up now</button>
+                <button type="button" class="btn1 mt-3 mb-5">Sign up</button>
             </div>
            </div>
            <p>you have an account? <a href="login.html" class="register">Login here</a> </p>  
