--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="card-body">
               <h1 class="text-center font-weight-light py-3">Contact Us</h1>
               <div class="row pt-3">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <div class="row">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
 
@@ -127,9 +127,9 @@
                           <p>old Mihail kongainiceanu, nr. 8, <br>
                             7652 Bucharest, <br>
                             Romania </p>
-                      </div>
+                      </div> 
                     </div>
-                    <div class="row">
+                    <div class="row pt-3">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
 
                       </div>
@@ -140,6 +140,25 @@
                           Mon - Fri, 9:00 - 18:00 </p>
                       </div>
                     </div>
+                </div>
+                <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+                    <form action="">
+                      <div class="form-row">
+                          <div class="form-group col-lg-6 col-md-12 col-sm-12 col-12">
+                              <label for="">First Name</label>
+                              <input type="text" name="" id="" class="form-control" placeholder="First Name">
+                          </div>
+                          <div class="form-group col-lg-6 col-md-12 col-sm-6 col-12">
+                            <label for="">Last Name</label>
+                            <input type="text" name="" id="" class="form-control" placeholder="Last Name">
+                        </div>
+                      </div>
+                      <label for="">Email</label>
+                      <input type="email" name="email" id="email" placeholder="Email" class="form-control">
+                      <label for="">Your Message</label>
+                      <textarea id="" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
+                      <input type="checkbox" name="checkbox" id="checkbox"><label for="">I'm not a robot</label><button class="btn btn-primary" style="float: right;">Send Message</button>
+                    </form>
                 </div>
               </div>
              
@@ -224,6 +243,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <script src="app.js"></script>
+    <script src="https://kit.fontawesome.com/18919f69fb.js" crossorigin="anonymous"></script>
 </body>
     
 </html>
