changed the banner images of the indivdual pages

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
     
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
@@ -39,22 +39,22 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ship.html">Ship now</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="register.html">Sign Up</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Track</button>
+            <button class="btn btn-outline-primary" type="submit">Track</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
   <section class="banner">
-    <div class="bg-image" style="background-image: url('Assets/img/truck1.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+    <div class="bg-image" style="background-image: url('Assets/img/ship04.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
       <h1>
         About Us
       </h1>
@@ -62,7 +62,7 @@
   </section>
 
     <!-- Footer -->
-    <footer class=" fixed-bottom bg-dark text-white ">
+    <footer class=" fixed bg-dark text-white ">
         <!-- Grid container -->
         <div class="container p-4">
           <!--Grid row-->
@@ -90,9 +90,6 @@
                 </li>
                 <li>
                   <a href="services.html" class="text-white">Services</a>
-                </li>
-                <li>
-                  <a href="ship.html" class="text-white">Ship Now</a>
                 </li>
                 <li>
                   <a href="contact.html" class="text-white">Contact us</a>
