--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
     
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
@@ -39,9 +39,6 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ship.html">Ship now</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
@@ -50,22 +47,78 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Track</button>
+            <button class="btn btn-outline-primary" type="submit">Track</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
   <section class="banner">
-    <div class="bg-image drk" style="background-image: url('Assets/img/truck1.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+    <div class="bg-image drk" style="background-image: url('Assets/img/ship06.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
       <h1>
         Contact us
       </h1>
   </div>
   </section>
 
+  <section class="leaveMessage pb-5 container-fluid">
+    <div class="container py-5">
+      <div class="card"> 
+          <div class="card-body">
+              <h1 class="text-center font-weight-light py-3">Contact Us</h1>
+              <div class="row pt-3">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                    <div class="row">
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <span style="font-size: 40px; ; color: cadetblue;"><i class="fa-sharp fa-solid fa-location-dot"></i></span>
+                      </div>
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <h3 class="font-weight-light">Find Our Office</h3>
+                          <p>old Mihail kongainiceanu, nr. 8, <br>
+                            7652 Bucharest, <br>
+                            Romania </p>
+                      </div> 
+                    </div>
+                    <div class="row pt-3">
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <span style="font-size: 40px; ; color: coral;"><i class="fa-solid fa-phone-volume"></i></span>
+                      </div>
+                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
+                          <h3 class="font-weight-light">Give us a Ring</h3>
+                          <p>Stone Cold Courier, <br>
+                          +40 762 321 762, <br>
+                          Mon - Fri, 9:00 - 18:00 </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+                    <form action="">
+                      <div class="form-row">
+                          <div class="form-group col-lg-6 col-md-12 col-sm-12 col-12">
+                              <label for="">First Name</label>
+                              <input type="text" name="" id="" class="form-control" placeholder="First Name">
+                          </div>
+                          <div class="form-group col-lg-6 col-md-12 col-sm-6 col-12">
+                            <label for="">Last Name</label>
+                            <input type="text" name="" id="" class="form-control" placeholder="Last Name">
+                        </div>
+                      </div>
+                      <label for="">Email</label>
+                      <input type="email" name="email" id="email" placeholder="Email" class="form-control">
+                      <label for="">Your Message</label>
+                      <textarea id="" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
+                      <input type="checkbox" name="checkbox" id="checkbox" required><label for="">I'm not a robot</label><button class="btn btn-primary" style="float: right;">Send Message</button>
+                    </form>
+                </div>
+              </div>
+             
+          </div>
+      </div>
+    </div>
+</section>
+
     <!-- Footer -->
-    <footer class=" fixed-bottom bg-dark text-white ">
+    <footer class=" fixed bg-dark text-white ">
         <!-- Grid container -->
         <div class="container p-4">
           <!--Grid row-->
