--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
@@ -37,9 +37,6 @@
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Ship now</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
@@ -48,7 +45,7 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Track</button>
+          <button class="btn btn-outline-primary" type="submit">Track</button>
         </form>
       </div>
     </div>
@@ -105,13 +102,8 @@
         </div>
 </section>
 
-<section class="mid-section2">
-  <div class="container-fluidcd ">
 
-  </div>
-</section>  
-
-<section class="leaveMessage pb-5">
+<section class="leaveMessage pb-5 container-fluid">
     <div class="container py-5">
       <div class="card"> 
           <div class="card-body">
@@ -120,7 +112,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <div class="row">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-
+                          <span style="font-size: 40px; ; color: cadetblue;"><i class="fa-sharp fa-solid fa-location-dot"></i></span>
                       </div>
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
                           <h3 class="font-weight-light">Find Our Office</h3>
@@ -131,7 +123,7 @@
                     </div>
                     <div class="row pt-3">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-
+                          <span style="font-size: 40px; ; color: coral;"><i class="fa-solid fa-phone-volume"></i></span>
                       </div>
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
                           <h3 class="font-weight-light">Give us a Ring</h3>
@@ -157,7 +149,7 @@
                       <input type="email" name="email" id="email" placeholder="Email" class="form-control">
                       <label for="">Your Message</label>
                       <textarea id="" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
-                      <input type="checkbox" name="checkbox" id="checkbox"><label for="">I'm not a robot</label><button class="btn btn-primary" style="float: right;">Send Message</button>
+                      <input type="checkbox" name="checkbox" id="checkbox" required><label for="">I'm not a robot</label><button class="btn btn-primary" style="float: right;">Send Message</button>
                     </form>
                 </div>
               </div>
@@ -167,7 +159,7 @@
     </div>
 </section>
   <!-- Footer -->
-  <!-- <footer class=" fixed-bottom bg-dark text-white ">
+   <footer class=" fixed bg-dark text-white ">
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
@@ -235,7 +227,6 @@
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2023 Stone Cold Logistics Ltd, All rights reserved.
     </div>
-    <!-- Copyright -->
   </footer>
   <!-- Footer -->
   
