--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 <body>
     
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
@@ -39,15 +39,15 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ship.html">Ship now</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="register.html">Sign Up</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Track</button>
+            <button class="btn btn-outline-primary" type="submit">Track</button>
           </form>
         </div>
       </div>
@@ -55,15 +55,57 @@
   </header>
   
   <section class="banner">
-    <div class="bg-image" style="background-image: url('Assets/img/truck1.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+    <div class="bg-image" style="background-image: url('Assets/img/ship10.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
       <h1>
         Our Services
       </h1>
   </div>
   </section>
 
+  <section class="mid-section">
+    <h1>Seamless delivery services</h1>
+    <a href="#" class="card-link">
+      <div class="card-container cardboarder-container">
+        <div class="card cardboarder" style="width: 22rem;">
+          <img src="Assets/img/box.png" alt="">   
+          <div class="card-body">
+            <h5 class="card-title">Ship now</h5>
+            <p class="card-text">Request Pick Up/Delivery and Xpress Drop-off</p>
+          </div>
+        </div>
+    </a>
+    <a href="#" class="card-link">
+      <div class="card cardboarder" style="width: 22rem;">
+        <img src="Assets/img/world.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Overseas Shipping</h5>
+          <p class="card-text">Ship across Europe, south america, Asia and Africa, Export to over 230 plus locations worldwide</p>
+        </div>
+      </div>
+    </a>
+    <a href="#" class="card-link">
+      <div class="card cardboarder" style="width: 22rem;">
+        <img src="Assets/img/message.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Get a Quick Quote</h5>
+          <p class="card-text">Calculate cost estimate for local & international shipments</p>
+        </div>
+      </div>
+    </a>
+     <a href="#" class="card-link">
+      <div class="card cardboarder" style="width: 22rem;">
+        <img src="Assets/img/shop.png" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Alpha mode</h5>
+          <p class="card-text">coming soon.</p>
+        </div>
+      </div>
+     </a>
+    </div>
+</section>
+
     <!-- Footer -->
-    <footer class=" fixed-bottom bg-dark text-white ">
+    <footer class=" fixed bg-dark text-white ">
         <!-- Grid container -->
         <div class="container p-4">
           <!--Grid row-->
