building my testimonial section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,51 @@
 </section>
 
 <section class="testimonial">
+  <div class="container container-fluid">
+      <h1>Testimonials</h1>
+      <p class="text-center">what to expect as our valued customers  </p>
+      <div class="row">
+          <div class="col-md-4 text-center">
+              <div class="profile">
+                <img src="Assets/img/man1.png" alt="User 1">
+                <blockquote>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </blockquote>
+                <h3>Jordan Smith </h3>
+              </div>
+          </div>
+              <div class="col-md-4 text-center">
+                <div class="profile">
+                  <img src="Assets/img/woman1.png" alt="User 1">
+                  <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </blockquote>
+                  <h3>Lilian Walker</h3>
+                </div>
+              </div>
+                <div class="col-md-4 text-center">
+                  <div class="profile">
+                    <img src="Assets/img/man2.png" alt="User 1">
+                    <blockquote>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </blockquote>
+                    <h3>Paul Andersen</h3>
+                  </div>
+                </div>
+                  <div class="col-md-4 text-center">
+                    <div class="profile">
+                      <img src="Assets/img/woman2.png" alt="User 1">
+                      <blockquote>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </blockquote>
+                      <h3>Beatrice Morgan </h3>
+                    </div>
+                  </div>
+          </div>
+      </div>
 
+  </div>
+ 
 </section>
 
 <!-- Footer -->
