made new changes to my testimonial section

--- a/contact.html
+++ b/contact.html
@@ -63,32 +63,7 @@
       <div class="card"> 
           <div class="card-body">
               <h1 class="text-center font-weight-light py-3">Get in Touch</h1>
-              <div class="row pt-3">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                    <div class="row">
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <span style="font-size: 40px; ; color: cadetblue;"><i class="fa-sharp fa-solid fa-location-dot"></i></span>
-                      </div>
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3 class="font-weight-light">Find Our Office</h3>
-                          <p>old Mihail kongainiceanu, nr. 8, <br>
-                            7652 Bucharest, <br>
-                            Romania </p>
-                      </div> 
-                    </div>
-                    <div class="row pt-3">
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <span style="font-size: 40px; ; color: coral;"><i class="fa-solid fa-phone-volume"></i></span>
-                      </div>
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3 class="font-weight-light">Give us a Ring</h3>
-                          <p>Stone Cold Courier, <br>
-                          +40 762 321 762, <br>
-                          Mon - Fri, 9:00 - 18:00 </p>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+              <div class="row pt-3 m-4">
                     <form action="">
                       <div class="form-row">
                           <div class="form-group col-lg-6 col-md-12 col-sm-12 col-12">
