--- a/index.html
+++ b/index.html
@@ -124,32 +124,7 @@
       <div class="card"> 
           <div class="card-body">
               <h1 class="text-center font-weight-light py-3">Get in Touch</h1>
-              <div class="row pt-3">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 contactinto">
-                    <div class="row">
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <span style="font-size: 40px; ; color: cadetblue;"><i class="fa-sharp fa-solid fa-location-dot"></i></span>
-                      </div>
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3 class="font-weight-light">Find Our Office</h3>
-                          <p>old Mihail kongainiceanu, nr. 8, <br>
-                            7652 Bucharest, <br>
-                            Romania </p>
-                      </div> 
-                    </div>
-                    <div class="row pt-3">
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <span style="font-size: 40px; ; color: coral;"><i class="fa-solid fa-phone-volume"></i></span>
-                      </div>
-                      <div class="col-lg-10 col-md-2 col-sm-2 col-2">
-                          <h3 class="font-weight-light">Give us a Ring</h3>
-                          <p>Stone Cold Courier, <br>
-                          +40 762 321 762, <br>
-                          Mon - Fri, 9:00 - 18:00 </p>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-12 col-sm-12 col-12">
+              <div class="row pt-3 m-4">
                     <form action="">
                       <div class="form-row">
                           <div class="form-group col-lg-6 col-md-12 col-sm-12 col-12">
@@ -169,13 +144,14 @@
                     </form>
                 </div>
               </div>
-             
           </div>
       </div>
     </div>
 </section>
 
 <section class="testimonial">
+  <h1>Testimonials</h1>
+  <p class="text-center">what to expect as our valued customers  </p> 
   <div class="container container-fluid">
       <div class="conent">
         <div class="card">
@@ -183,54 +159,24 @@
               <div class="image">
                   <img src="Assets/img/man1.png" alt="customer review" srcset="">  
               </div>
+
+              <div class="name-profession">
+                <span class="name">Someone name </span>
+                <span class="profession">web developer </span>
+              </div>
+
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i> 
+              </div>
+              
              </div>
         </div>
       </div>
-      <h1>Testimonials</h1>
-      <p class="text-center">what to expect as our valued customers  </p>
-      <div class="row">
-          <div class="col-md-4 text-center">
-              <div class="profile">
-
-                <img src="Assets/img/man1.png" alt="User 1">
-                <blockquote>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </blockquote>
-                <h3>Jordan Smith </h3>
-              </div>
-          </div>
-              <div class="col-md-4 text-center">
-                <div class="profile">
-                  <img src="Assets/img/woman1.png" alt="User 1">
-                  <blockquote>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                  </blockquote>
-                  <h3>Lilian Walker</h3>
-                </div>
-              </div>
-                <div class="col-md-4 text-center">
-                  <div class="profile">
-                    <img src="Assets/img/man2.png" alt="User 1">
-                    <blockquote>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </blockquote>
-                    <h3>Paul Andersen</h3>
-                  </div>
-                </div>
-                  <div class="col-md-4 text-center">
-                    <div class="profile">
-                      <img src="Assets/img/woman2.png" alt="User 1">
-                      <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                      </blockquote>
-                      <h3>Beatrice Morgan </h3>
-                    </div>
-                  </div>
-          </div>
-      </div>
-
   </div>
- 
 </section>
 
 <!-- Footer -->
