finished building the UI of my website

--- a/services.html
+++ b/services.html
@@ -20,9 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
-          <h2>STONE COLD</h2>
-  
+          <img src="Assets/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,7 +63,7 @@
         <div class="card cardboarder">
           <img src="Assets/img/box.png" alt="">   
           <div class="card-body">
-            <h5 class="card-title">Ship now</h5>
+            <h5 class="card-title">Affiliate Partnership</h5>
             <p class="card-text">Request Pick Up/Delivery and Xpress Drop-off</p>
           </div>
         </div>
@@ -83,8 +81,8 @@
       <div class="card cardboarder">
         <img src="Assets/img/message.png" alt="">
         <div class="card-body">
-          <h5 class="card-title">Get a Quick Quote</h5>
-          <p class="card-text">Calculate cost estimate for local & international shipments</p>
+          <h5 class="card-title">Home Delivery</h5>
+          <p class="card-text">We delivers your packages to your door steps</p>
         </div>
       </div>
     </a>
