--- a/about.html
+++ b/about.html
@@ -20,9 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
-          <h2>STONE COLD</h2>
-  
+          <img src="Assets/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
