--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
           crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="shortcut icon" href="Assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -18,8 +20,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
-        <h2>STONE COLD</h2>
+        <img src="Assets/img/logo.png" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -84,7 +85,7 @@
             <div class="card cardboarder">
               <img src="Assets/img/box.png" alt="">   
               <div class="card-body">
-                <h5 class="card-title">Ship now</h5>
+                <h5 class="card-title">Affiliate Partnership</h5>
                 <p class="card-text">Request Pick Up/Delivery and Xpress Drop-off</p>
               </div>
             </div>
@@ -102,8 +103,8 @@
           <div class="card cardboarder">
             <img src="Assets/img/message.png" alt="">
             <div class="card-body">
-              <h5 class="card-title">Get a Quick Quote</h5>
-              <p class="card-text">Calculate cost estimate for local & international shipments</p>
+              <h5 class="card-title">Home Delivery</h5>
+              <p class="card-text">We delivers your packages to your door steps</p>
             </div>
           </div>
         </a>
@@ -150,19 +151,19 @@
 </section>
 
 <section class="testimonial">
-  <h1>Testimonials</h1>
+  <h1>Testimonials</h1 >
   <p class="text-center">what to expect as our valued customers  </p> 
-  <div class="container container-fluid">
-      <div class="conent">
-        <div class="card">
+  <div class="swiper mySwiper container container-fluid">
+      <div class="swiper-wrapper content">
+        <div class="swiper-slide card">
              <div class="card-content">
               <div class="image">
                   <img src="Assets/img/man1.png" alt="customer review" srcset="">  
               </div>
 
               <div class="name-profession">
-                <span class="name">Someone name </span>
-                <span class="profession">web developer </span>
+                <span class="name">Steven Colman</span>
+                <span class="profession">Stone Cold has a track record of delivering top notch courier services, they are my first choice of delivery services</span>
               </div>
 
               <div class="rating">
@@ -172,9 +173,160 @@
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i> 
               </div>
-              
              </div>
         </div>
+
+        <div class="swiper-slide card">
+          <div class="card-content">
+           <div class="image">
+               <img src="Assets/img/woman1.png" alt="customer review" srcset="">  
+           </div>
+
+           <div class="name-profession">
+             <span class="name">Lilian Morgan </span>
+             <span class="profession">I have been using Stone Cold courier service to deliver my goods to my customers in africa and they haven't failed me for once</span>
+           </div>
+
+           <div class="rating">
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i>
+             <i class="fas fa-star"></i> 
+           </div>
+          </div>
+     </div>
+
+     <div class="swiper-slide card">
+      <div class="card-content">
+        <div class="image">
+            <img src="Assets/img/man2.png" alt="customer review" srcset="">  
+        </div>
+
+        <div class="name-profession">
+          <span class="name">Brian Lucas </span>
+          <span class="profession">Stone cold and my company have been affiliates for 5years now, and they have always delivered our products at lightening speed </span>
+        </div>
+
+        <div class="rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i> 
+        </div>
+        </div>
+   </div>
+
+  <div class="swiper-slide card">
+    <div class="card-content">
+    <div class="image">
+        <img src="Assets/img/woman2.png" alt="customer review" srcset="">  
+    </div>
+
+    <div class="name-profession">
+      <span class="name">Samantha Baker </span>
+      <span class="profession">They keep setting the standards for other courier services to follow through their unrivalled 5-star customer treatment and package handling </span>
+    </div>
+
+    <div class="rating">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i> 
+    </div>
+    </div>
+  </div>
+
+  <div class="swiper-slide card">
+    <div class="card-content">
+    <div class="image">
+        <img src="Assets/img/man3.png" alt="customer review" srcset="">  
+    </div>
+
+    <div class="name-profession">
+      <span class="name">Matteo Francesco </span>
+      <span class="profession">Stone cold courier is simply the best delivery service you can get at a very price friendly rate and good delivery time.  </span>
+    </div>
+
+    <div class="rating">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i> 
+    </div>
+    </div>
+  </div>
+
+  <div class="swiper-slide card">
+    <div class="card-content">
+    <div class="image">
+        <img src="Assets/img/woman3.png" alt="customer review" srcset="">  
+    </div>
+
+    <div class="name-profession">
+      <span class="name">Park Ae-Cha </span>
+      <span class="profession">Stone cold has been my best option of sending packages to my family members in south korea for some years now. </span>
+    </div>
+
+    <div class="rating">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i> 
+    </div>
+    </div>
+  </div>
+
+  <div class="swiper-slide card">
+    <div class="card-content">
+    <div class="image">
+        <img src="Assets/img/woman4.png" alt="customer review" srcset="">  
+    </div>
+
+    <div class="name-profession">
+      <span class="name">Rhonda Gnonto </span>
+      <span class="profession">If you are looking for a top logistic company with a demonstrated history of customer satisfaction, then Stone Cold is your plug.  </span>
+    </div>
+
+    <div class="rating">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"></i>
+      <i class="far fa-star"></i>
+      <i class="far fa-star"></i> 
+    </div>
+    </div>
+  </div>
+
+    <div class="swiper-slide card">
+      <div class="card-content">
+      <div class="image">
+          <img src="Assets/img/man4.png" alt="customer review" srcset="">  
+      </div>
+
+      <div class="name-profession">
+        <span class="name">Nicholas Taylor </span>
+        <span class="profession">Stone cold services are just purely outstanding, great delivery time, low rates, excellent customer service and relationship just to mention a few </span>
+      </div>
+
+      <div class="rating">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="far fa-star"></i> 
+      </div>
+      </div>
+    </div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-scrollbar"></div>
+    <div class="swiper-pagination"></div>
       </div>
   </div>
 </section>
@@ -294,11 +446,11 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
-  
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/18919f69fb.js" crossorigin="anonymous"></script>
 </body>
     
